--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             alt="dogbording">
          </div>
          <div class="text">
-            <p class="container-dogs">Dog Boarding</p>
+            <p class="container-dog">Dog Boarding</p>
             <p class="container-dogs-desc">
               Instead of going to the kennels, your dog gets to 
               go to someones else, often with other pets
@@ -81,13 +81,13 @@
          </div>
          <div class="text">
               
-       <p class="container-dogs">Dog Sitting</p>
-       <p class="container-dogs-desc">
-         Your dog gets the comfort and convenience of staying in their 
-         own home, as the sitter comes to yours! 
-         There is the added bonus of your home being looked after.
-       </p>
-       <a href="#" class="link-learn-more">Learn More <b>></b></a>
+            <p class="container-dog">Dog Sitting</p>
+            <p class="container-dogs-desc">
+               Your dog gets the comfort and convenience of staying in their 
+               own home, as the sitter comes to yours! 
+               There is the added bonus of your home being looked after.
+            </p>
+            <a href="#" class="link-learn-more">Learn More <b>></b></a>
          </div>
      
       </div>
