--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       />
    </div>
 
-   <div class="temp">
+   <div class="padding">
       <div class="content-header">
             Our Services
       </div>
